--- a/C&CPP/02-CPP-Basic/00-C++学习资料.md
+++ b/C&CPP/02-CPP-Basic/00-C++学习资料.md
@@ -8,18 +8,23 @@
 
 ## 学习资料
 
+书籍
+
 - 《C++ Primer 5E》
 - 《Effective C++》
 - 《More Effective C++》
 - 《Effective STL》
 - 《Effective Modern C++》
-- 《C++ 编程规范》
-- 《C++ 标准库》
 - 《C++ 必知必会》
-- [riptutorial c++](https://riptutorial.com/zh-CN/cplusplus)
+- 《C++ 编程规范》
+- 《C++ 标准库 2E》
+
+网络教程
+
 - [cplusplus](http://www.cplusplus.com/)
-- [菜鸟教程](http://www.runoob.com/cplusplus/)
 - [C++ FAQ LITE — Frequently Asked Questions](http://www.sunistudio.com/cppfaq/)
+- [riptutorial c++](https://riptutorial.com/zh-CN/cplusplus)
+- [菜鸟教程](http://www.runoob.com/cplusplus/)
 
 博客
 
