--- a/C&CPP/05-现代C++实战/02-实现C++的智能指针.md
+++ b/C&CPP/05-现代C++实战/02-实现C++的智能指针.md
@@ -297,7 +297,7 @@ public:
 
 修改说明：
 
-- 把拷贝构造函数中的参数类型 `smart_ptr&` 改成了 `smart_ptr&&`；现在它成了移动构造函数，根据 C++ 的规则，如果我提供了移动构造函数而没有手动提供拷贝构造函数，那后者自动被禁用（C++ 里那些复杂的规则也是为方便编程而设立的）。
+- 把拷贝构造函数中的参数类型 `smart_ptr&` 改成了 `smart_ptr&&`；现在它成了移动构造函数，根据 C++ 的规则，**如果我提供了移动构造函数而没有手动提供拷贝构造函数，那后者自动被禁用**（C++ 里那些复杂的规则也是为方便编程而设立的）。
 - 把赋值函数中的参数类型 `smart_ptr&` 改成了 `smart_ptr`，在构造参数时直接生成新的智能指针，从而不再需要在函数体中构造临时对象。现在赋值函数的行为是移动还是拷贝，完全依赖于构造参数时走的是移动构造还是拷贝构造。
 
 根据上述规则，我们自然地得到了以下结果：
@@ -334,6 +334,8 @@ Shape4 ~Shape()
 2. 引入右值引用和移动构造后，用户要想用重载的 `operator=`，必须采用 `other_ptr = std::move(some_ptr)` 的方式，通过显示调用 `std::move`，让用户意识到 some_ptr 的内容已经被移动到 other_ptr 了，并且同时默认禁用了参数为左值引用的拷贝构造，导致 `other_ptr = some_ptr` 无法通过编译，就不会在使用时产生歧义了，这就是 unique_ptr 期望的语义。
 
 >另外：调用移动不一定靠 move。如果函数返回一个 unique_ptr 一样是自然的移动。
+
+这里的改动，可以参考《C++ Primer 5E》 13.6.2 拷贝并交换赋值运算符和移动操作
 
 ### 2.5 子类指针向基类指针的转换
 
