--- a/C&CPP/01-C-Basic/00-C学习资料.md
+++ b/C&CPP/01-C-Basic/00-C学习资料.md
@@ -14,12 +14,10 @@
 
 教程：
 
-- [riptutorial c](https://riptutorial.com/zh-CN/c)
 - [菜鸟教程](https://www.runoob.com/cprogramming/c-tutorial.html)
 - [The GNU C Programming Tutorial](http://www.crasseux.com/books/ctutorial/)
-- [cppreference](http://zh.cppreference.com/w/%E9%A6%96%E9%A1%B5)
+- [cppreference](https://zh.cppreference.com/w/c)
 - [awesome-c-cn](https://github.com/jobbole/awesome-c-cn)
-- [C语言编码规范](http://www.jianshu.com/p/0c29795c31fe)
 
 视频教程
 
@@ -33,3 +31,4 @@
 
 - [C++静态库与动态库](https://www.cnblogs.com/skynet/p/3372855.html)
 - [C语言再学习](https://blog.csdn.net/qq_29350001/category_9267707.html?utm_source=zl2019)
+- [C语言编码规范](http://www.jianshu.com/p/0c29795c31fe)
