--- a/C&CPP/02-CPP-Basic/00-C++学习资料.md
+++ b/C&CPP/02-CPP-Basic/00-C++学习资料.md
@@ -23,7 +23,7 @@
 
 - [cplusplus](http://www.cplusplus.com/)
 - [C++ FAQ LITE — Frequently Asked Questions](http://www.sunistudio.com/cppfaq/)
-- [riptutorial c++](https://riptutorial.com/zh-CN/cplusplus)
+- [cppreference](https://zh.cppreference.com/w/cpp)
 - [菜鸟教程](http://www.runoob.com/cplusplus/)
 
 博客
