--- a/C&CPP/02-CPP-Basic/10-类.md
+++ b/C&CPP/02-CPP-Basic/10-类.md
@@ -1117,7 +1117,7 @@ void sample4() {
 - 类似拷贝构造函数，如果类的析构函数被定义为删除的或不可访问的，则类的移动构造函数被定义为删除的。
 - 类似拷贝赋值运算符，如果有类成员是 const 的或是引用，则类的移动赋值运算符被定义为删除的。
 
-定义了一个移动构造函数或移动赋值运算符的类必须也定义自己的拷贝操作。否则,这些成员默认地被定义为删除的。
+定义了一个移动构造函数或移动赋值运算符的类必须也定义自己的拷贝操作。否则，这些成员默认地被定义为删除的。
 
 ##### 如果同时定了拷贝和移动操作：移动右值、拷贝左值
 
@@ -1148,6 +1148,10 @@ Foo z(std::move(x))//拷贝操作
 ```
 
 在对 z 进行初始化时调用了 `move(x)` 返回一个绑定到 x 的 Foo&&，Foo 的拷贝构造函数是可行的，因为我们可以将一个 `Foo&&` 转换为一个 `const Foo&`。因此, z 的初始化将使用 Foo 的拷贝构造函数。
+
+##### 拷贝并交换赋值运算符和移动操作
+
+相关内容参考[现代 C++ 30 讲](../05-现代C++实战/02-实现C++的智能指针.md)
 
 ##### 移动迭代器
 
