--- a/C&CPP/05-现代C++实战/03-右值和移动.md
+++ b/C&CPP/05-现代C++实战/03-右值和移动.md
@@ -3,7 +3,7 @@
 ---
 ## 1 左值与右值
 
-### C++ 的值类别
+### 1.1 C++ 的值类别
 
 C++ 里有左值和右值。划分地更细一下，C++ 标准规定了下面这些值类别（value categories）
 
@@ -15,7 +15,7 @@ C++ 里有左值和右值。划分地更细一下，C++ 标准规定了下面这
 - 一个 xvalue 是 expiring lvalue，将亡值
 - 一个 prvalue 是 pure rvalue，纯右值
 
-### lvalue
+### 1.2 lvalue
 
 左值 lvalue 是有标识符、可以取地址的表达式，最常见的情况有：
 
@@ -29,14 +29,14 @@ C++ 里有左值和右值。划分地更细一下，C++ 标准规定了下面这
 string& s = "hello world";
 ```
 
-### prvalue
+### 1.3 prvalue
 
 纯右值 prvalue 是没有标识符、不可以取地址的表达式，一般也称之为“临时对象”。最常见的情况有：
 
 - 返回非引用类型的表达式，如 `x++、x + 1、make_shared<int>(42)`
 - 除字符串字面量之外的字面量，如 42、true
 
-### 右值引用
+### 1.4 右值引用
 
 在 C++11 之前，右值可以绑定到常左值引用（const lvalue reference）的参数，如 const T&，但不可以绑定到非常左值引用（non-const lvalue reference），如 T&。
 
@@ -92,7 +92,7 @@ smart_ptr(smart_ptr<U>&& other) noexcept {
 - 使用右值引用的第二个重载函数中的变量 `smart_ptr<U>&& other` 算是左值还是右值？根据定义，other 是个变量的名字，变量有标识符、有地址，所以它还是一个左值——虽然它的类型是右值引用。
 - 拿这个 other 去调用函数时，它匹配的也会是左值引用。
 
-#### xvalue 和 prvalue
+### 1.5 xvalue 和 prvalue
 
 对于下面代码
 
@@ -111,7 +111,7 @@ xvalue：
 
 ![](images/03-xvalue.png)
 
-### “值类别”（value category）和“值类型”
+### 1.6 “值类别”（value category）和“值类型”
 
 “值类别”（value category）和“值类型”（value type）是两个看似相似、却毫不相干的术语。
 
@@ -217,9 +217,10 @@ result&& r = std::move(process_shape( circle(), triangle()));
 
 另外，参考[Herb Sutter, “GotW #88: A candidate for the ‘most important const’”.](https://herbsutter.com/2008/01/01/gotw-88-a-candidate-for-the-most-important-const/)中提到的，可以把一个没有虚析构函数的子类对象绑定到基类的引用变量上，这个子类对象的析构仍然是完全正常的——这是因为这条规则只是延后了临时对象的析构而已，不是利用引用计数等复杂的方法，因而只要引用绑定成功，其类型并没有什么影响。
 
+---
 ## 3 移动的意义
 
-### 减少运行时开销
+### 3.1 减少运行时开销
 
 对于 smart_ptr，我们使用右值引用的目的是实现移动，而实现移动的意义是减少运行的开销。
 
@@ -266,7 +267,7 @@ result += ".";
 
 性能上，所有的字符串只复制了一次；虽然比啰嗦的写法仍然要增加临时对象的构造和析构，但由于这些操作不牵涉到额外的内存分配和释放，是相当廉价的。程序员只需要牺牲一点点性能，就可以大大增加代码的可读性。而且，所谓的性能牺牲，也只是相对于优化得很好的 C 或 C++ 代码而言——这样的 C++ 代码的性能仍然完全可以超越 Python 类的语言的相应代码。
 
-### C++ 里的对象缺省都是值语义
+### 3.2 C++ 里的对象缺省都是值语义
 
 参考下面代码：
 
@@ -284,7 +285,8 @@ class A {
 
 一句话总结，移动语义使得在 C++ 里返回大对象（如容器）的函数和运算符成为现实，因而可以提高代码的简洁性和可读性，提高程序员的生产率。**所有的现代 C++ 的标准容器都针对移动进行了优化**。
 
-## 5 如何实现移动？
+---
+## 4 如何实现移动？
 
 让你设计的对象支持移动的话，通常需要下面几步：
 
@@ -293,7 +295,7 @@ class A {
 - 在你的对象的名空间下，应当有一个全局的 swap 函数，调用成员函数 swap 来实现交换。支持这种用法会方便别人（包括你自己在将来）在其他对象里包含你的对象，并快速实现它们的 swap 函数。
 - 实现通用的 operator=。上面各个函数如果不抛异常的话，应当标为 noexcept。这对移动构造函数尤为重要。
 
-### 以 smart_ptr 实现为例
+### 4.1 以 smart_ptr 实现为例
 
 smart_ptr 有拷贝构造和移动构造函数（虽然此处我们的模板构造函数严格来说不算拷贝或移动构造函数）。移动构造函数应当从另一个对象获取资源，清空其资源，并将其置为一个可析构的状态。
 
@@ -355,7 +357,8 @@ operator=(smart_ptr rhs) noexcept {
 }
 ```
 
-## 4 不要返回本地变量的引用
+---
+## 5 不要返回本地变量的引用
 
 有一种常见的 C++ 编程错误，是**在函数里返回一个本地对象的引用**。由于在函数结束时本地对象即被销毁，返回一个指向本地对象的引用属于未定义行为。理论上来说，程序出任何奇怪的行为都是正常的。
 
@@ -433,6 +436,7 @@ Obj()
 Obj(Obj&&)
 ```
 
+---
 ## 6 引用坍缩和完美转发
 
 引用坍缩（又称“引用折叠”）。这个概念在泛型编程中是一定会碰到的。既然讲了左值和右值引用，也需要一起讲一下。
@@ -517,6 +521,7 @@ foo(shape&&)
 
 一切如预期一样。因为在 T 是模板参数时，T&& 的作用主要是保持值类别进行转发，它有个名字就叫“转发引用”（forwarding reference）。因为既可以是左值引用，也可以是右值引用，它也曾经被叫做“万能引用”（universal reference）。
 
+---
 ## 7 总结
 
 内容归纳：
@@ -536,6 +541,7 @@ foo(shape&&)
 - xvalue, 通常是使用std::move被强制转换为右值的值。
 - 对于 `result&& r = std::move(process_shape( circle(), triangle()));` 这个 r 当然是个左值, 它指代的右值, 就是 xvalue。
 
+---
 ## 8 思考题
 
 1 请查看一下标准函数模板 `make_shared` 的声明，然后想一想，这个函数应该是怎样实现的。
@@ -544,6 +550,7 @@ foo(shape&&)
 
 - 答：左值和右值都有效是因为构造参数时，如果是左值，就用拷贝构造构造函数，右值就用移动构造函数无论是左值还是右值，构造参数时直接生成新的智能指针，因此不需要判断。
 
+---
 ## 9 原文
 
 - [03 | 右值和移动究竟解决了什么问题？](https://time.geekbang.org/column/article/169268)
