--- a/Java/05-Concurrent/05-极客时间《Java并发编程实战》/06-安全性、活跃性以及性能问题.md
+++ b/Java/05-Concurrent/05-极客时间《Java并发编程实战》/06-安全性、活跃性以及性能问题.md
@@ -140,7 +140,7 @@ if (状态变量 满足 执行条件) {
 1. 当某个线程发现状态变量满足执行条件后，开始执行操作；
 2. 就在这个线程执行操作的时候，其他线程同时修改了状态变量，导致状态变量不满足执行条件了。
 
-个人理解：**线程执行操作的判断操作，与线程将要执行的操作，不同原子性的，而线程将要执行的操作又会导致判断条件的结果发生变化，这个将会导致判断条件的结果发生变化操作，可能被其他线程抢先执行**。
+个人理解：**线程执行操作的判断操作，与线程将要执行的操作，不是原子性的，而线程将要执行的操作又会导致判断条件的结果发生变化，这个将会导致判断条件的结果发生变化操作，可能被其他线程抢先执行**。。
 
 ### 解决数据竞争和竞态条件问题——锁
 
