--- a/Android/08-Architecture/04-架构实践.md
+++ b/Android/08-Architecture/04-架构实践.md
@@ -7,7 +7,7 @@
 
 #### 1.1.1 单 Activity + 多 Fragment
 
-一个应用可以分为众多模块，模块间通过通过接口或者路径架构进行依赖。单独模块使用 **Activity+ 多Fragment** 架构，**Activity 仅仅作为容器**，它管理多个模块内的 Fragment，Fragment 作为具体的 View 实现，不过需要谨慎处理 Fragment 的生命周期。防止内存泄露、状态丢失等问题的发生。
+一个应用可以分为众多模块，模块间通过接口或者路径架构进行依赖。单独模块使用 **Activity+ 多Fragment** 架构，**Activity 仅仅作为容器**，它管理多个模块内的 Fragment，Fragment 作为具体的 View 实现，不过需要谨慎处理 Fragment 的生命周期。防止内存泄露、状态丢失等问题的发生。
 
 #### 1.1.2 为什么使用 Fragment
 
