--- a/Android/08-Architecture/05-组件化与模块化.md
+++ b/Android/08-Architecture/05-组件化与模块化.md
@@ -15,15 +15,32 @@
 - view
 ```
 
-按照这种方式组织代码，可以说是没有模块化思想的，不同的 Activity/Fragment/Adapter 分别用于实现不同的功能，属于不同的业务，并没有什么好的理由把它们组织在一起（难道仅仅因为它们都是某个类的子类），这样划分 java 的 package default 访问权限控制将毫无作用，没有从物理上隔离不同模块的类，不知不觉就写出跨模块依赖的代码，某一个模块的变更要跨多个包进行修改，或多或少影响其他模块，在针对某一个模块进行迭代时，也不利于查找，完全谈不上高内聚和低耦合。
+按照这种方式组织代码，不同的 Activity/Fragment/Adapter 分别用于实现不同的功能，属于不同的业务，并没有什么理由把它们组织在一起（难道仅仅因为它们都是某个类的子类），这样划分 java 的 package default 访问权限控制将毫无作用，没有从物理上隔离不同模块的类，不知不觉就写出跨模块依赖的代码，某一个模块的变更要跨多个包进行修改，或多或少还可能影响其他模块，在针对某一个模块进行迭代时，也不利于查找，完全谈不上高内聚和低耦合。
 
 模块化注重的是 **功能划分，边界清晰，模块间低耦合，模块内高内聚**。展开来讲，这也是对单一功能设计原则和迪米特法则的应用。不管你是什么类型，只要你们用于实现同一业务功能，你们之间应该是内聚的，然后对于模块之外，应该做到尽量少的暴露公共方法，模块间通过低耦合的协议进行交互，这就是低耦合的体现。
 
+模块化一般推荐的分包方式为：
+
+```log
+- feature1
+    presentation 展示层
+    data 数据层
+    common 通用
+    widget UI组件
+- feature2
+    presentation 展示层
+    data 数据层
+    common 通用
+    widget UI组件
+- featureN
+    ......
+```
+
 ### 组件化
 
-首先这里的组件化不是指 **基础组件**，可以把基础组件理解为通用的基础功能实现，基础组件可以被各个业务组件所依赖，比如：多媒体选择组件、音视频基础组件、基础UI组件等。
+**基础组件** 是可以把基础组件理解为通用的基础功能实现，基础组件可以被各个业务组件所依赖，比如：多媒体选择组件、音视频基础组件、基础UI组件等，而组件化中的组件不是指基础组件。
 
-相对于模块化，业务组件化中的组件是可独立的，模块依附于主工程，而组件可以依附在主工程也可以独立存在。它更加强调独立。
+相对于模块化，业务组件中的组件是可独立的，模块依附于主工程，而组件可以依附在主工程也可以独立存在。它更加强调独立。
 
 - 组件化拆分的更彻底，在编码阶段，可以完全脱离主工程进行独立开发，这在团队协作上也有一定的效率提升，而且组件之间的代码可以做的完全隔离。
 - 开发调试时，组件可以单独运行调试，从而减少了编译运行的时间消耗。
@@ -32,10 +49,10 @@
 ---
 ## 2 如何实施组件化与模块化
 
-在Android中实施如何组件化？
+在Android中如何实施组件化？
 
 1. 构建一个封装完善的基础库，各个组件都依赖于它，它应该为组件化提供强大的支持，比如路由架构、各种基础功能的集成、一些共享数据模型等。
-2. 根据业务功能把一个项目划分为各个独立的组件
+2. 在模块化的基础上，进一步将项目划分为各个独立的组件。
 3. 消除各个组件之间的直接依赖。
 
 AndroidStudio 使用 gradle 进行项目构建，gradle 使得我们可以像编程一样控制构建过程，当一个模块应用 application 插件时，它将被构建为 apk，当一个模块应用 library 插件时，它将被构建为 aar，这正是我们进行组件化的利器，通过各种配置达到一键切换整体编译集成还是各个组件独立编译允许的目的。从而大大的提高开发效率。当然既然是可以编程的，我们可以自定义一个 Gradle 插件，实现灵活的项目构建配置。
@@ -50,7 +67,7 @@ AndroidStudio 使用 gradle 进行项目构建，gradle 使得我们可以像编
 | ModuleXXX | 根据业务跨分出来的能独立运行的业务组件，即可以单独运行，又可以库的形式集成到APP壳中，比如Main组件、购物车组件、聊天组件、订单组件等。 |
 | base | base是项目的基础，提供最基础的、与具体业务无关的功能，比如网络请求、通用UI组件、base还负责集成功能的Library库(当然base中也有一些业务相关的、各模块共享的功能，这是不可避免的) |
 
-### 插件化配置关键代码
+### 组件化配置关键代码
 
 ```groovy
 //应用不同的插件
