--- a/Android/08-Architecture/05-组件化与模块化.md
+++ b/Android/08-Architecture/05-组件化与模块化.md
@@ -262,8 +262,12 @@ public interface IComponent {
 - 路由拦截
 - ARouter不支持Fragment的startActivityForResult
 
+## [Component](https://github.com/xiaojinzi123/Component)
+
+- [ ] todo
+
 ---
-## 5 [Android 模块化平台设计](https://kymjs.com/code/2018/04/22/01/)（记录）
+## 5 [Android 模块化平台设计](https://kymjs.com/code/2018/04/22/01/)学习记录
 
 模块化四个点：删除、组织、降级、解耦
 
