--- a/Flutter/03-《Flutter核心技术与实战》极客时间/18-依赖管理2-库.md
+++ b/Flutter/03-《Flutter核心技术与实战》极客时间/18-依赖管理2-库.md
@@ -52,6 +52,14 @@ dependencies:
 ## 3 远程依赖于本地依赖
 
 - **第三方包**：基于版本的方式引用第三方包，需要在其 Pub 上进行公开发布，我们可以访问 <https://pub.dev/> 来获取可用的第三方包。
+
+比如依赖 [DateTime](https://api.flutter.dev/flutter/dart-core/DateTime-class.html) 库：
+
+```yaml
+dependencies:
+  date_format: 1.0.6
+```
+
 - **本地包**：对于不对外公开发布，或者目前处于开发调试阶段的包，我们需要设置数据源，使用本地路径或 Git 地址的方式进行包声明。
 
 下面演示了分别以路径依赖以及 Git 依赖的方式，声明了 package1 和 package2 这两个包：
