--- a/Android/03-Android-UI/SystemUI/资源定义与使用实践.md
+++ b/Android/03-Android-UI/SystemUI/资源定义与使用实践.md
@@ -1,4 +1,4 @@
-# 资源定义与使用实践总结
+# 资源定义与使用实践
 
 ---
 ## 1 在xml中使用html标签
@@ -18,20 +18,20 @@ TextView默认支持一些html标签,可以直接在xml中使用
 
 直接在xml中定义即可：
 
-```
+```xml
     <string name="html">This <b>is</b> <i>all</i> <sub>in</sub> <u><sup>one</sup></u> <a href="http://google.com">TextView</a>.</string>
 ```
 
 相应xml中`<a>`标签的点击：
 
-```
+```java
     TextView myTextView = (TextView) findViewById(R.id.my_textview);
     myTextView.setMovementMethod(LinkMovementMethod.getInstance());
 ```
 
 静态的xml文本资源是由`android.content.res.StringBlock`类解析的，支持以下标签：
 
-```
+```xml
     <a> (supports attributes "href")
     <annotation>
     <b>
@@ -49,7 +49,8 @@ TextView默认支持一些html标签,可以直接在xml中使用
 ```
 
 Html.fromHtml()支持的标签：
-```
+
+```xml
 <a href="...">  //定义链接内容
 <b> //定义粗体文字   b 是blod的缩写
 <big> //定义大字体的文字
@@ -80,7 +81,7 @@ Html.fromHtml()支持的标签：
 
 color支持的颜色的名称：
 
-```
+```xml
     具体的颜色值如：#FF00000
     aqua
     black
@@ -121,13 +122,13 @@ String.format占位符时需要注意：string.xml 定义更加严格
 ---
 ## 3 Resource的getString方法
 
-Resource的多参数的getString方法用来格式化String，而不需要先获取String在调用String.format方法。
+Resource的多参数的getString方法用来格式化String，而不需要先获取String在调用String.format方法。但是format字符串不支持html标签，所以需要对html字符串进行格式化时，应该对html标签进行转义：
 
-但是format字符串不支持html标签，所以需要对html字符串进行格式化时，应该对html标签进行转义：
-
-```
-    <b>Stop.</b>//没有转义
-    &lt;b>Stop&lt;/b>.%1$s//转义，其中&lt;b>表示>,&lt;/b>表示>,%1$s表示需要格式化占位符。
+```xml
+    <!-- 没有转义 -->
+    <b>Stop.</b>
+    <!-- 转义，其中&lt;b>表示>,&lt;/b>表示>,%1$s表示需要格式化占位符。 -->
+    &lt;b>Stop&lt;/b>.%1$s
 ```
 
 ---
@@ -155,10 +156,20 @@ String text = getResource().getQuantityString(R.plruals.minutes,minutes);
 ```
 
 ---
-## 7 从一个 theme 中获取属性
+## 7 从 theme 中获取属性
 
-```java
-  TypedValue typedValue = new TypedValue();
-  activity.getTheme().resolveAttribute(android.R.attr.colorBackground, typedValue, true);
-  int color = typedValue.data;
+```kotlin
+/**
+ * - attr, like [android.R.attr.selectableItemBackground] or other attr id.
+ */
+fun getResourceId(context: Context, attr: Int): Int {
+    return try {
+        val outValue = TypedValue()
+        context.theme.resolveAttribute(attr, outValue, true)
+        outValue.resourceId
+    } catch (e: Exception) {
+        e.printStackTrace()
+        0
+    }
+}
 ```
