--- a/Flutter/03-《Flutter核心技术与实战》极客时间/20-跨组件传递数据.md
+++ b/Flutter/03-《Flutter核心技术与实战》极客时间/20-跨组件传递数据.md
@@ -43,6 +43,8 @@ class CountContainer extends InheritedWidget {
 }
 ```
 
+>注意，上面 `inheritFromWidgetOfExactType` 方法已过期，应该使用 `static CountContainer of(BuildContext context) => context.dependOnInheritedWidgetOfExactType<CountContainer>();`。
+
 然后，使用 CountContainer 作为根节点，并用 0 初始化 count。随后在其子 Widget Counter 中，我们通过 InheritedCountContainer.of 方法找到它，获取计数状态 count 并展示：
 
 ```dart
@@ -62,6 +64,7 @@ class Counter extends StatelessWidget {
   Widget build(BuildContext context) {
     // 获取 InheritedWidget 节点
     CountContainer state = CountContainer.of(context);
+    // 构建展示视图
     return Scaffold(
       appBar: AppBar(title: Text("InheritedWidget demo")),
       body: Text(
