--- a/Flutter/03-《Flutter核心技术与实战》/25-本地存储与数据库的使用和优化.md
+++ b/Flutter/03-《Flutter核心技术与实战》/25-本地存储与数据库的使用和优化.md
@@ -10,6 +10,13 @@
 
 文件是存储在某种介质（比如磁盘）上指定路径的、具有文件名的一组有序信息的集合。
 
+使用文件存储，我们需要使用到 path_provider 插件：
+
+```yaml
+dependencies:
+  path_provider: ^0.4.0
+```
+
 ### 存储路径
 
 想要使用文件存储就肯定需要知道存储路径。Flutter 提供了两种文件存储的目录，即**临时（Temporary）目录**与**文档（Documents）目录**：
@@ -54,6 +61,13 @@ Future<String> readContent() async {
 
 ## 2 SharedPreferences
 
+使用 SharedPreferences 存储，我们需要使用到 shared_preferences 插件：
+
+```yaml
+dependencies:
+  shared_preferences: ^0.5.0
+```
+
 SharedPreferences 会以原生平台相关的机制，为简单的键值对数据提供持久化存储，即：
 
 - 在 iOS 上使用 NSUserDefaults
@@ -85,6 +99,13 @@ Future<void>_incrementCounter() async {
 ## 3 数据库
 
 如果我们需要持久化大量格式化后的数据，并且这些数据还会以较高的频率更新，为了考虑进一步的扩展性，我们通常会选用 sqlite 数据库来应对这样的场景。
+
+使用 数据库 存储，我们需要使用到 sqflite 插件：
+
+```yaml
+dependencies:
+  sqflite:
+```
 
 示例：
 
