--- a/Flutter/03-《Flutter核心技术与实战》/29-混合开发-导航栈管理方案.md
+++ b/Flutter/03-《Flutter核心技术与实战》/29-混合开发-导航栈管理方案.md
@@ -8,7 +8,7 @@
 
 ## 1 混合导航栈
 
-混合导航栈，指的是原生页面和 Flutter 页面相互掺杂，存在于用户视角的页面导航栈视图中。
+**混合导航栈**：指的是原生页面和 Flutter 页面相互掺杂，存在于用户视角的页面导航栈视图中。
 
 Flutter 与原生 Android、iOS 各自实现了一套互不相同的页面映射机制，即：
 
