--- a/C&CPP/01-C-Basic/00-C学习资料.md
+++ b/C&CPP/01-C-Basic/00-C学习资料.md
@@ -32,3 +32,4 @@
 - [C++静态库与动态库](https://www.cnblogs.com/skynet/p/3372855.html)
 - [C语言再学习](https://blog.csdn.net/qq_29350001/category_9267707.html?utm_source=zl2019)
 - [C语言编码规范](http://www.jianshu.com/p/0c29795c31fe)
+- [C++那些事](https://github.com/Light-City/CPlusPlusThings)
