--- a/Android/03-Android-UI/SystemUI/半透明状态栏.md
+++ b/Android/03-Android-UI/SystemUI/半透明状态栏.md
@@ -5,8 +5,7 @@
 ---
 ## 1 Translucent 特性
 
-从 android4.4 的开始，引入了 Translucent 特性。
-默认情况下，应用程序窗口在 Status Bar 下面(位置之下)，系统已经处理好了应用窗口的显示，我们不需要关心 Inset(插入物) 和 fitSystemWindow(适应系统窗口)，当使用了 `Translucent System UI` 或 `SYSTEM_UI_FLAG_FULLSCREEN` 等属性时，Activity 的 UI 可以显示到 System UI 下层(层次之下)。
+从 android4.4 的开始，引入了 Translucent 特性。默认情况下，应用程序窗口在 StatusBar 下面(位置之下)，系统已经处理好了应用窗口的显示，我们不需要关心 Inset(插入物) 和 fitSystemWindow(适应系统窗口)，当使用了 `Translucent System UI` 或 `SYSTEM_UI_FLAG_FULLSCREEN` 等属性时，Activity 的 UI 可以显示到 System UI 下层(层次之下)。
 
 使用 Translucent 特性有两种方法，一种是在 theme 中定义，还有一个种是在代码中设置。
 
@@ -16,7 +15,9 @@
             <item name="android:windowTranslucentNavigation">true</item>
     </style>
 ```
+
 或者
+
 ```java
        public static void setTranslucent(Activity activity, boolean on) {
             if (Build.VERSION.SDK_INT < Build.VERSION_CODES.KITKAT) {
@@ -39,7 +40,9 @@
             win.setAttributes(winParams);
         }
 ```
+
 开启了 TranslucentTheme 视图就是这样的了：
+
 ```xml
     <LinearLayout
         android:id="@+id/root"
@@ -65,6 +68,7 @@
 然而，Translucent 特性在 5.0 之后又变化了，当我们添加了`FLAG_TRANSLUCENT_STATUS`标志位后，系统给状态栏加上了一条半透明的浅灰色。
 
 布局文件如下：
+
 ```xml
     <LinearLayout
         android:id="@+id/root"
@@ -84,6 +88,7 @@
 
     </LinearLayout>
 ```
+
 ![](index_files/4880aaaa-6cc6-486a-b421-b67d0364efc7.jpg)
 
 但是5.0开始我们可以指定statusbar的颜色了，而且我们试着分析一下`FLAG_TRANSLUCENT_NAVIGATION`和`FLAG_TRANSLUCENT_STATUS`：
@@ -95,6 +100,7 @@
 单独添加 `FLAG_TRANSLUCENT_NAVIGATION` 属性依然可以让 UI 显示到 StatusBar 下面。只是 StatusBar 没有变透明。TextView 被 StatusBar 挡住了。
 
 而 **5.0** 后我们可以把设置状态栏的颜色为透明色：
+
 ```xml
      <style name="ColorTranslucentTheme" parent="Theme.AppCompat.Light.DarkActionBar">
             <item name="android:windowTranslucentNavigation">true</item>
@@ -103,11 +109,12 @@
             <item name="android:statusBarColor">@android:color/transparent</item>
         </style>
 ```
+
 这时视图是这样的了：
 
 ![](index_files/e88c1a00-1091-409e-ac4f-3e7ecde8e5dd.jpg)
 
->`windowDrawsSystemBarBackgrounds`，默认为 **TRUE**，因为我们的 theme 有可能是继承过来的，这里写出来是确保其为 true。windowDrawsSystemBarBackgrounds 为 true 表示：指示设置词标志的窗口负责绘制系统栏背景。参考[FLAG_DRAWS_SYSTEM_BAR_BACKGROUNDS](https://developer.android.com/reference/android/view/WindowManager.LayoutParams.html#FLAG_DRAWS_SYSTEM_BAR_BACKGROUNDS)
+>`windowDrawsSystemBarBackgrounds`，默认为 **TRUE**，因为我们的 theme 有可能是继承过来的，这里写出来是确保其为 true。windowDrawsSystemBarBackgrounds 为 true 表示：指示设置此标志的窗口负责绘制系统栏背景。参考[FLAG_DRAWS_SYSTEM_BAR_BACKGROUNDS](https://developer.android.com/reference/android/view/WindowManager.LayoutParams.html#FLAG_DRAWS_SYSTEM_BAR_BACKGROUNDS)
 
 ---
 ## 2 setFitsSystemWindows
@@ -117,11 +124,14 @@
 先看一个示例，比如在 4.4 的系统版本上设置了开启半透明状态栏：
 
 设置半透明状态属性：
+
 ```xml
      <item name="android:windowTranslucentStatus">true</item>//半透明状态栏
      <item name="android:windowTranslucentNavigation">true</item>//半透明导航栏
 ```
+
 布局：
+
 ```xml
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -139,23 +149,28 @@
 
     </LinearLayout>
 ```
+
 当把 TextView 的 fitsSystemWindows 设置为 true 时是这样的：
+
 ![](index_files/c5b9423c-6783-4b1f-bc8a-66b61199ea65.jpg)
 
 而如果把 TextView 的 fitsSystemWindows 设置为 false 时又是这样的：
+
 ![](index_files/1df58613-7d28-4121-ab43-61f5e515922a.jpg)
 
 是不是从效果就可以很好的理解这个 setFitsSystemWindows 的作用了？但是需要注意的是，如果我给根布局 `LinearLayout` 设置一个背景色效果就是这样的了：
 
 当把 setFitsSystemWindows 设置为 true：
+
 ![](index_files/6796b3b6-5b22-4d61-9c46-a908df859f56.jpg)
 
 当把 setFitsSystemWindows 设置为 false：
+
 ![](index_files/4a3f7f59-002e-494f-ae47-69ba3b0d76ae.jpg)
 
 可见，当设置 fitsSystemWindows 为 true 时，系统默认的实现是给 View 加上一个Padding 值，通过这个 Padding 值正好让 View 的内容不会系统 UI 挡住。
 
-`View.setFitSystemWindows(boolean)`，用于设置是否使用系统默认的 fitSystemWindows 实现。系统布局的 FitSystemWindows 默认为 false，不会消耗掉内容边衬区空间的占用，此时 Views 树会继续调用 View Hierarchy 中其他 View 的fitSystemWindows，直到某一个 View 中返回 true，调用顺序是深度优先。如果我们决定自己处理 System UI 的空间占用，可以重写VIew的 `fitSystemWindows(Rect insets)`并返回 true，如果自己只是做些处理，仍想调用系统的默认实现，要记得调用super.fitSystemWindows 并返回 false。
+`View.setFitSystemWindows(boolean)`，用于设置是否使用系统默认的 fitSystemWindows 实现。系统布局的 FitSystemWindows 默认为 false，不会消耗掉内容边衬区空间的占用，此时 Views 树会继续调用 View Hierarchy 中其他 View 的 fitSystemWindows，直到某一个 View 中返回 true，调用顺序是深度优先。如果我们决定自己处理 System UI 的空间占用，可以重写VIew的 `fitSystemWindows(Rect insets)`并返回 true，如果自己只是做些处理，仍想调用系统的默认实现，要记得调用 super.fitSystemWindows 并返回 false。
 
 关于相关 fitSystemWindows 的相关方法如下：
 
@@ -186,7 +201,6 @@ View.java:
         }
 ```
 
-
 ### fitsSystemWindows 的坑
 
 1. `android:fitsSystemWindows`属性需要在布局文件中设置，虽然也可在 theme 中设置，但是这个懒不能偷，因为在theme中设置是针对 window 的，而在布局文件中设置才是针对 view 的
@@ -199,17 +213,19 @@ View.java:
 ### Android 4.4
 
 可以在Activity的theme中设置如下属性(或者在代码中设置)：
+
 ```xml
     <style name="ColorTranslucentTheme" parent="Theme.AppCompat.Light.DarkActionBar">
             <item name="android:windowTranslucentStatus">true</item>
             <item name="android:windowTranslucentNavigation">true</item> //不一定需要
     </style>
 ```
+
 然后根据需求给我们视图跟布局设置 `android:fitsSystemWindows="true"`，如果我们希望的是视图从 SystemUI 就开始显示我们的App内容，就是设置为 false。否则设置为 true。
 
 然后再给 statusbar 着色，给 statusbar 着色有几种方案：
 
-- 参考**[SystemBarTint](https://github.com/jgilfelt/SystemBarTint)**给DecorView添加一个与StatusBar一样高度的纯色View
+- 参考 **[SystemBarTint](https://github.com/jgilfelt/SystemBarTint)** 给DecorView添加一个与StatusBar一样高度的纯色View
 - 给我们的视图根布局设置一个背景色。
 - 不设置`android:fitsSystemWindows="true"`，修改Toolbar的PaddingTop值为：`toolbar.getPaddingTop()+getStatusBarHeight()`
 
@@ -218,7 +234,6 @@ View.java:
 注意，如果是使用 theme 设置 translucent 属性，需要根据系统版本新建对应的 values 文件夹：
 
 ![](index_files/f9b98753-8e8f-493f-adcf-dced2f420b00.png)
-
 
 ### Android 5.x
 
@@ -240,18 +255,19 @@ View.java:
 
 首先 Activity 与 Dialog 的 View 等都是以 Window 的概念添加的系统的 WindowManager 中去的，除了一般的应用窗口和子窗口，还有系统窗口，而系统窗口的优先级是最高的，所以会显示在一般应用窗口的上面，像 StatusBar 和 NavigationBar 都是系统级别的窗口，再加上我们 Activity 对于的窗口就合成了我们在屏幕上看到的视图。
 
-Activity 的 PhoneWindow 内部管理的是以 DecorView 为根布局的 View 树，而根据我们是否拥有控制权来分，姑且把 View 树分为内部布局和外部布局两部分，外部布局即我们调用 setContentView 设置添加的内容布局，而内容布局以上的层级可以称为内部布局。对于一个非Dialog 形式的 Activity 来讲，DecorView 的宽高始终是等于屏幕的宽高的，内部布局通过设置 Margin 让我们设置的布局默认显示在 StatusBar 等系统 UI 的下面，通过AndroidStudio 提供的布局分析器可以查看：
+Activity 的 PhoneWindow 内部管理的是以 DecorView 为根布局的 View 树，而根据我们是否拥有控制权来分，姑且把 View 树分为内部布局和外部布局两部分，外部布局即我们调用 setContentView 设置添加的内容布局，而内容布局以上的层级可以称为内部布局。对于一个非Dialog 形式的 Activity 来讲，DecorView 的宽高始终是等于屏幕的宽高的，内部布局通过设置 Margin 让我们设置的布局默认显示在 StatusBar 等系统 UI 的下面，通过 AndroidStudio 提供的布局分析器可以查看：
 
 布局层级分析
+
 ![](index_files/a0a27942-ef5a-403d-a248-46613f99e519.png)
 
 内部布局的属性，可以看到有一个 topMargin 值
+
 ![](index_files/ad838af6-5f94-4be4-a0f3-ae12601d99f0.png)
 
 当我们把 Activity 的 Window 设置为全屏时，内部布局的属性 topMargin 值将被设置为0，此时我们设置的外部布局就可以填充整个屏幕了。
 
 同样通过布局分析器可以查看设置了 `fitsSystemWindows="true"` 属性的 View 会被加上padding，用于防止 View 的内容被系统窗口挡住。
-
 
 ---
 ## 引用
