--- a/C&CPP/02-CPP-Basic/00-C++学习资料.md
+++ b/C&CPP/02-CPP-Basic/00-C++学习资料.md
@@ -4,7 +4,7 @@
 
 - [Linux之父炮轰C++：糟糕程序员的垃圾语言](http://blog.csdn.net/turingbook/article/details/1775488)
 
-炮轰归炮轰，我们一般程序员还是得学：
+炮轰归炮轰，学还是得学：
 
 ## 学习资料
 
@@ -32,6 +32,7 @@
 - [C++笔记](http://www.hahack.com/wiki/)
 - [cpp-primer 笔记](https://r00tk1ts.github.io/tags/cpp-primer/)
 - [C/C++基础知识点](https://blog.csdn.net/K346K346/category_9265704_2.html)
+- [C/C++ 技术面试基础知识总结，包括语言、程序库、数据结构、算法、系统、网络、链接装载库等知识及面试经验、招聘、内推等信息](https://github.com/huihut/interview)
 
 视频教程
 
