--- a/OS/09-LanguageUnderstanding/《左耳听风》：程序中的错误处理.md
+++ b/OS/09-LanguageUnderstanding/《左耳听风》：程序中的错误处理.md
@@ -15,7 +15,7 @@ long strtol(const char *restrict str, char **restrict endptr, int base);
 
 这种用 `返回值 + errno` 的错误检查方式会有一些问题:
 
-- 程序员一不小心就会忘记返回值的检查，而造成代码的 Bug； 
+- 程序员一不小心就会忘记返回值的检查，而造成代码的 Bug；
 - 函数接口非常不纯洁，正常值和错误值混淆在一起，导致语义有问题。
 
 ---
@@ -23,8 +23,8 @@ long strtol(const char *restrict str, char **restrict endptr, int base);
 
 有一些语言通过多返回值来解决这个问题，比如 Go 语言。Go 语言的很多函数都会返回 `result, err` 两个值，于是:
 
-- 参数上基本上就是入参，而返回接口把结果和错误分离，这样使得函数的接口语义清晰； 
-- 而且，Go 语言中的错误参数如果要忽略，需要显式地忽略，用 `_` 这样的变量来忽略； 
+- 参数上基本上就是入参，而返回接口把结果和错误分离，这样使得函数的接口语义清晰；
+- 而且，Go 语言中的错误参数如果要忽略，需要显式地忽略，用 `_` 这样的变量来忽略；
 - 另外，因为返回的 error 是个接口（其中只有一个方法 `Error()`，返回一个 string ），于是你在扩展自定义的错误处理。
 
 ---
@@ -43,13 +43,13 @@ long strtol(const char *restrict str, char **restrict endptr, int base);
 
 ```java
 try { 
-    ... // 正常的业务代码 
-} catch (Exception1 e) { 
-    ... // 处理异常 Exception1 的代码 
-} catch (Exception2 e) { 
-    ... // 处理异常 Exception2 的代码 
-} finally { 
-    ... // 资源清理的代码 
+    ... // 正常的业务代码
+} catch (Exception1 e) {
+    ... // 处理异常 Exception1 的代码
+} catch (Exception2 e) {
+    ... // 处理异常 Exception2 的代码
+} finally {
+    ... // 资源清理的代码
 }
 ```
 
@@ -111,8 +111,8 @@ try {
 
 不过，我们也要知道，在某些情况下，你只能使用其中的一个，比如：
 
-- 在 C++ **重载操作符** 的情况下，你就很难使用错误返回码，只能抛异常； 
-- 异常捕捉只能在同步的情况下使用，在 **异步模式** 下，抛异常这事就不行了，需要通过检查子 进程退出码或是回调函数来解决； 
+- 在 C++ **重载操作符** 的情况下，你就很难使用错误返回码，只能抛异常；
+- 异常捕捉只能在同步的情况下使用，在 **异步模式** 下，抛异常这事就不行了，需要通过检查子 进程退出码或是回调函数来解决；
 - 在分布式的情况下，调用远程服务只能看错误返回码，比如 HTTP 的返回码。
 
 所以，在大多数情况下，我们会混用这两种报错的方式，有时候，我们还会把异常转成错误码 （比如 HTTP 的 RESTful API），也会把错误码转成异常（比如对系统调用的错误）
@@ -147,10 +147,10 @@ try {
 
 ```javascript
 doSomething() 
-.then(result => doSomethingElse(result)) 
-.then(newResult => doThirdThing(newResult)) 
+.then(result => doSomethingElse(result))
+.then(newResult => doThirdThing(newResult))
 .then(finalResult => {  
-    console.log(`Got the final result: ${finalResult}`); 
+    console.log(`Got the final result: ${finalResult}`);
 })
 .catch(failureCallback);
 ```
@@ -158,17 +158,17 @@ doSomething()
 上面代码中的 `then()` 和 `catch()` 方法就是 Promise 对象的方法，`then(`)方法可以把各个异 步的函数给串联起来，而`catch()` 方法则是出错的处理。Promise 的功能还不止如此，比如 Promise 还可以同时等待两个不同的异步方法。
 
 ```javascript
-promise1 = doSomething(); 
-promise2 = doSomethingElse(); 
+promise1 = doSomething();
+promise2 = doSomethingElse();
 Promise.when(promise1, promise2)
-.then(function (result1, result2) { 
-    ... // 处理 result1 和 result2 的代码 
+.then(function (result1, result2) {
+    ... // 处理 result1 和 result2 的代码
 }, handleError);
 ```
 
 在 ECMAScript 2017 的标准中，我们还可以使用 `async/await` 这两个关键字来取代 Promise 对象，这样可以让我们的代码更易读。
 
-#### Java 异步编程的 Promise 模式 
+#### Java 异步编程的 Promise 模式
 
 在 Java 中，在 JDK 1.8 里也引入了类 JavaScript 的玩法 —— CompletableFuture。这个类提供了大量的异步编程中 Promise 的各种方式。
 
@@ -193,7 +193,7 @@ Promise.when(promise1, promise2)
 - 对于同类的错误处理，用一样的模式。比如，对于 null 对象的错误，要么都用返回 null，加上条件检查的模式，要么都用抛 NullPointerException 的方式处理。不要混用，这样有助于代码规范。
 - 尽可能在错误发生的地方处理错误。因为这样会让调用者变得更简单。
 - 向上尽可能地返回原始的错误。如果一定要把错误返回到更高层去处理，那么，应该返回原始的错误，而不是重新发明一个错误。
-- 处理错误时，总是要清理已分配的资源。这点非常关键，使用 RAII 技术，或是 try-catchfinally，或是 Go 的 defer 都可以容易地做到。
+- 处理错误时，总是要清理已分配的资源。这点非常关键，使用 RAII 技术，或是 try-catch-finally，或是 Go 的 defer 都可以容易地做到。
 - **不推荐在循环体里处理错误**。这里说的更多的情况是对于 try-catch 这种情况，对于绝大多 数的情况你不需要这样做。最好把整个循环体外放在 try 语句块内，而在外面做 catch
 - 不要把大量的代码都放在一个 try 语句块内。一个 try 语句块内的语句应该是完成一个简单单一的事情。
 - 为你的错误定义提供清楚的文档以及每种错误的代码示例。如果你是做 RESTful API 方面 的，使用 Swagger 会帮你很容易搞定这个事。
