--- a/Front-end/01-HTML&CSS/前端规范.md
+++ b/Front-end/01-HTML&CSS/前端规范.md
@@ -5,9 +5,9 @@
 - html 规范
 - css 规范
 - javascript 规范
-    - ECMA 规范
-    - DOM 规范
-    - BOM 没有规范
+  - ECMA 规范
+  - DOM 规范
+  - BOM 没有规范
 
 ## HTML 规范
 
@@ -21,33 +21,33 @@ CSS3 是级联样式表 / 层叠样式表(Cascading Style Sheets)语言的最新
 
 - 狭义上，我们可以认为css3是所有级别为3的css特性的集合
 - 广义上，我们应该认为css3是css2.0后出现的所有css相关特性的集合
- 
+
 CSS Level 2 经历了 9 年的时间(从 2002 年 8 月到 2011 年 6 月)才达到 Recommendation(推荐) 状态。主要的原因是被一些 secondary features(次要特性) 拖了后腿。 为了加快那些已经确认为没有问题的特性的标准化速度， W3C 的 CSS Working Group(CSS 工作组)  作出了一项决定， 将 CSS 划分为许多小组件， 称之为 模块 。 这些模块彼此独立， 按照各自的进度来进行/列标准化。其中一些已经是 W3C Recommendation 状态， 也有一些还仅仅是 early Working Drafts(早期工作草案)。 当新需求被确认后， 新的模块也同样被添加进来。
- 
+
 再也没有css规范，只存在[css模块及其模块级别](https://www.w3.org/Style/CSS/current-work)
 
  1. 如果模块在 CSS 2.1 就有相关的内容，那么这些模块就从 level 3 开始。
  2. 如果是完全新的属性（比如 Flexbox），就直接从 level 1 开始。
  3. 一个模块的级别和它所在 CSS 的版本无关，即不管它是 CSS 2.1 的内容还是完全新的属性。   
  4. 可能会看到类似 css4-backgrounds 这样的写法，其实代表的是 CSS Background & Borders Level 4，即4表示的是模块的等级。
-          
+
 CSS Working Group(CSS 工作组)：W3C（World Wide Web Consortium，万维网联盟）实际上并不制定标准。对于 W3C 旗下的各个工作组（Working Groups, WG）来说，W3C 更像是一个论坛，聚集各种兴趣团体并让他们为某个标准而努力。当然，W3C 并不只是作为整个论坛的观察者：它制定整个论坛的基本规则并观察标准制定的整个流程。
- 
+
 一份css标准要经历的一些流程：标准不是凭空捏造的，制定标准也不是闭门造车。CSS WG 所有的提交都是透明的，所有的交流都是对[公众开放的](https://lists.w3.org/Archives/Public/www-style/)，标准确定一般有6个[阶段](https://www.w3.org/2005/10/Process-20051014/tr#maturity-levels)，其中两个是过渡阶段：
 
 1. 编辑草案 Editor's Draft (ED)：这个是规范的开始阶段，一个CSS属性或者选择器被提出来，并在CSSWG内部研究。如果小组成员同意这个属性可以正式推出，它就能进入下一阶段。对于处于这一阶段的规范，不附加任何必要条件，也不保证会被 WG 批准。此外，这也是修改版的第一个阶段：所有的修改内容首先要经过 ED，然后才能被发布。
 2. 工作草案 Working Draft (WD)：编辑草案后是工作草案，标准的设计阶段。小组反复处理来自 CSSWG 内部和来自小组外部的反馈，这个阶段有两个结果：一是可能会因为技术困难或者可能会引起其他问题而使新属性被完全拒绝；二是规范会通过这个阶段，并会作为第一次公开工作草案（ First Public Working Draft (FPWD)）发布，后面还会有数个工作草案，会处理来自 CSSWG 内部和小组外部更广泛社会的反馈。
 3. 最后通告工作草案 – Last Call Working Draft (LCWD)过渡阶段：这是第一个过渡阶段，当规范开始考虑从工作草案进入到下一个阶段时，将会对新属性的一些小改动的反馈设置一个截止日期，LCWD 即是日期截至后最后的一次公开草案处理。
-4.  候选推荐标准 Candidate Recommendation (CR)：规范会在这个阶段通过完整的测试，测试人员来自 CSSWG 以及被选为实现这个规范的浏览器生产商(Chrome, Safari, Firefox, Opera, 等等)。为了继续进入下一阶段，CSSWG 会推出两个正确的实现规范。
-5.  建议推荐标准– Proposed Recommendations (PR)过渡阶段：当到达这个阶段，W3C全球资源小组：W3C咨询委员会（W3C Advisory Committee），决定这个规范是否会继续进入下一个阶段。这个阶段一般很少有异议出现，所以也是一个过渡阶段而已。
+4. 候选推荐标准 Candidate Recommendation (CR)：规范会在这个阶段通过完整的测试，测试人员来自 CSSWG 以及被选为实现这个规范的浏览器生产商(Chrome, Safari, Firefox, Opera, 等等)。为了继续进入下一阶段，CSSWG 会推出两个正确的实现规范。
+5. 建议推荐标准– Proposed Recommendations (PR)过渡阶段：当到达这个阶段，W3C全球资源小组：W3C咨询委员会（W3C Advisory Committee），决定这个规范是否会继续进入下一个阶段。这个阶段一般很少有异议出现，所以也是一个过渡阶段而已。
 6. 推荐标准 Recommendation (REC)：如果规范到达这个阶段，说明规范已经考虑完备并可以让浏览器商实现，W3C 和 CSSWG 对这个规范的讨论处理不再活跃，只做一些必要的维护。
- 
+
 **标准（规范）什么时候是稳定的**：规范的稳定性基本和它所在的流程阶段没有关系。当规范特性已经开始传播开来，并因为向后兼容性不能改变时，它才是稳定的，这个阶段可能会在 ED 规范阶段或者 CR 阶段，这才是稳定性评判的正确方法，而不是 W3C 的标准发布流程。
- 
+
 **浏览器前缀**：有些 CSS 模块已经十分稳定并满足了 CSSWG 规定的三个推荐级别之一：Candidate Recommendation(候选推荐)， Proposed Recommendation(建议推荐) 或 Recommendation(推荐)。 这表明这些模块已经十分稳定，使用时也不必添加前缀， 但是一些特性还是有可能在 Candidate Recommendation 阶段被放弃。
- 
+
 **总结**：级联样式表(CSS)再也没有传统意义上的版本了;相反，它有级别。每个级别的CSS都建立在以前的、细化的定义和添加特性上。每个高级级别的特性集都是任何较低级别的超集，因此，符合更高级别CSS的用户代理也符合所有较低的级别。
-    
+
 ## JavaScript
 
 JavaScript 包括：
@@ -106,22 +106,22 @@ BOM 的核心对象是 window，它表示浏览器的一个实例。在浏览器
 **定时器**：
 
 ```javascript
-    // 不建议传递字符串
-	setTimeout("console.log('Hello world!') ", 1000);
-	
-	// 推荐的调用方式
-	setTimeout(function() { 
-	    console.log("Hello world!"); 
-	}, 1000);
+// 不建议传递字符串
+setTimeout("console.log('Hello world!') ", 1000);
+
+// 推荐的调用方式
+setTimeout(function() { 
+	console.log("Hello world!"); 
+}, 1000);
 ```
 
-第二个参数是一个表示等待多长时间的毫秒数，但经过该时间后指定的代码不一定会执行。JavaScript 是一个单线程序的解释器，因此一定时间内只能执行一段代码。为了控制要执行的代码，就有一个 JavaScript 任务队列。这些任务会按照将它们添加到队列的顺序执行。setTimeout() 的第二个参数告诉 JavaScript 再过多长时间把当前任务添加到队列中(添加的过程是异步的)。如果队列是空的，那么添加的代码会立即执行；如果队列不是空的，那么它就要等前面的代码执行完了以后再执行。 
+第二个参数是一个表示等待多长时间的毫秒数，但经过该时间后指定的代码不一定会执行。JavaScript 是一个单线程序的解释器，因此一定时间内只能执行一段代码。为了控制要执行的代码，就有一个 JavaScript 任务队列。这些任务会按照将它们添加到队列的顺序执行。setTimeout() 的第二个参数告诉 JavaScript 再过多长时间把当前任务添加到队列中(添加的过程是异步的)。如果队列是空的，那么添加的代码会立即执行；如果队列不是空的，那么它就要等前面的代码执行完了以后再执行。
 
 #### 其他对象
 
 - navigator 对象
 - location 对象
-- history 对象	
-- screen 对象	
+- history 对象
+- screen 对象
 
-location 对象是很特别的一个对象，因为它既是 window 对象的属性，也是 document 对象的属性；换句话说，window.location 和 document.location 引用的是同一个对象。
+location 对象是很特别的一个对象，因为它既是 window 对象的属性，也是 document 对象的属性；换句话说，window.location 和 document.location 引用的是同一个对象
