--- a/C&CPP/01-C-Basic/00-C学习资料.md
+++ b/C&CPP/01-C-Basic/00-C学习资料.md
@@ -4,12 +4,12 @@
 
 书籍：
 
-- 《C Primer Plus》
 - 《C程序设计语言中文版》
-- 《嗨翻C语言》
-- 《C和指针》
-- 《C陷阱与缺陷》
-- 《C专家编程》
+- 《C Primer Plus》
+- 《嗨翻 C 语言》
+- 《C 和指针》
+- 《C 陷阱与缺陷》
+- 《C 专家编程》
 - [《Linux C编程一站式学习》](https://akaedu.github.io/book/)
 
 教程：
@@ -27,9 +27,12 @@
 
 - [C 函数速查手册](https://www.kymjs.com/c/)
 
+疑难问题
+
+- [C语言/C++字符编码方式解析](http://m.biancheng.net/view/4296.html)
+
 高质量博客
 
 - [C++静态库与动态库](https://www.cnblogs.com/skynet/p/3372855.html)
 - [C语言再学习](https://blog.csdn.net/qq_29350001/category_9267707.html?utm_source=zl2019)
 - [C语言编码规范](http://www.jianshu.com/p/0c29795c31fe)
-- [C++那些事](https://github.com/Light-City/CPlusPlusThings)
