--- a/C&CPP/02-CPP-Basic/00-C++学习资料.md
+++ b/C&CPP/02-CPP-Basic/00-C++学习资料.md
@@ -27,12 +27,16 @@
 - [cppreference](https://zh.cppreference.com/w/cpp)
 - [菜鸟教程](http://www.runoob.com/cplusplus/)
 
+Github
+
+- [C/C++ 技术面试基础知识总结，包括语言、程序库、数据结构、算法、系统、网络、链接装载库等知识及面试经验、招聘、内推等信息](https://github.com/huihut/interview)
+- [C++那些事](https://github.com/Light-City/CPlusPlusThings)
+
 博客
 
 - [C++笔记](http://www.hahack.com/wiki/)
 - [cpp-primer 笔记](https://r00tk1ts.github.io/tags/cpp-primer/)
 - [C/C++基础知识点](https://blog.csdn.net/K346K346/category_9265704_2.html)
-- [C/C++ 技术面试基础知识总结，包括语言、程序库、数据结构、算法、系统、网络、链接装载库等知识及面试经验、招聘、内推等信息](https://github.com/huihut/interview)
 
 视频教程
 
