--- a/OS/02-CSAPP/深入理解计算机操作系统-01-计算机系统漫游.md
+++ b/OS/02-CSAPP/深入理解计算机操作系统-01-计算机系统漫游.md
@@ -3,6 +3,7 @@
 计算机是有硬件和系统软件组成的。
 
 ---
+
 ## 1 信息就是(位 + 上下文)
 
 - 系统中所有的信息，包括磁盘文件、存储器中的程序、存储器中存放的用户数据以及网络上传送的数据，都是值为 0 和 1 的组成的**位**(bit)序列。
@@ -11,6 +12,7 @@
 - 作为程序员，需要了解数字的机器表示方式，**因为它们与实际的整数和实数不同，它们是对真值的有限近似值**，因此有时候会有意想不到的行为。
 
 ---
+
 ## 2 源程序被其他程序翻译成不同的格式
 
 一个 helloword 程序从高级的 c 语言被其他程序转化为一系列低级的机器语言指令。比如：
@@ -27,7 +29,7 @@ int main()
 
 运行`unix> gcc -0 hello Hello.c` 将得到可执行文件 hello，gcc 读取 `Hello.c` 源文件并把它翻译为可执行的目标文件 hello，这个翻译过程需要经历四个步骤：
 
-![](index_files/909fd228-8704-4b20-a92e-d0fb4aa54c56.png)
+![01-compiling-process.png](images/01-compiling-process.png)
 
 预处理器、编译器、汇编器和链接器(ld)组成了一个编译系统。
 
@@ -37,6 +39,7 @@ int main()
 - 链接阶段：由链接完成，Hello 程序调用的 printf 函数，它是每个 c 编译器都会提供了一个 c 标准函数，printf 存在与一个名为 `printf.o` 的单独的预编译好的目标文件中，而这个文件必须以某种形式合并到 `hello.o` 中，链接器就负责这个过程，并输出可执行文件 hello
 
 ---
+
 ## 3 了解编译系统如何工作是大有溢处的
 
 1. 优化程序性能
@@ -49,11 +52,12 @@ int main()
 3. 避免安全漏洞
 
 ---
+
 ## 4 处理器读并解释存储在存储器中的指令
 
 ### 系统的硬件组成
 
-![](index_files/40cb7407-8eb1-4e93-8322-d3eb3aa916d1.jpg)
+![01-computer-hardware.jpg](images/01-computer-hardware.jpg)
 
 - **总线**:贯穿整个系统的一组电子管道，携带信息字节并在各个部位之间传递。通常总线被设计成传送定长的字节块，也就是**字**，字中的字节数称为**字长**，是一个基本的系统参数，在各个系统中不尽相同。大多数机器字长有的为 4 个字节，有的为 8 个字节
 - **I/O设备**：输入输出设备时系统与外部世界的联系通道，比如鼠标、键盘、显式屏、磁盘驱动器
@@ -85,6 +89,7 @@ int main()
 - 处理器将 `"helloword"` 字符串中的字节从主内存复制到寄存器文件，然后又从寄存器文件复制到显示设备，最终显示出来。
 
 ---
+
 ## 5 高速缓存至关重要
 
 由于 CPU 直接从主内存读取数据和把数据写入到主内存中都是比较慢的，所以在 CPU 和主内存之间插入更小更快的存储设备(高速缓存)已经成为一个普遍的观念。现在的处理器都是如此。高速缓存用来存放处理器近期可能需要的信息。cup 的大部分操作都可以快速的在高速缓存中执行。
@@ -99,9 +104,10 @@ int main()
 
 从寄存器到主存的层次结构，从左到右，设备的访问速度越来越慢，容量却越来越大。存储设备形成的层次结构：
 
-![](index_files/61c5d355-3e0d-4fda-9454-6cc324075616.jpg)
+![01-cpu-cache.jpg](images/01-cpu-cache.jpg)
 
 ---
+
 ## 6 操作系统管理硬件
 
 操作系统之上的应用程序不会直接操作硬件，它们依靠操作系统提供服务，所以**可以把操作系统看作是应用程序和硬件之间的一层软件**。
@@ -145,11 +151,13 @@ int main()
 比如，程序员无须了解具体的磁盘技术，而是通过操作抽象的文件来处理磁盘内容。同一个抽象可以在使用不同磁盘技术的不同系统上运行。
 
 ---
+
 ## 7 系统之间利用网络通讯
 
 网络提供了计算机系统之间通讯的手段，特殊的角度来看，网络可以视为一个 `I/O` 设备，通过网络把孤立的操作系统连接起来。
 
 ---
+
 ## 8 重要概念
 
 系统是硬件和系统软件互相交织的集合体，它们必须共同合作已达到运行应用程序的最终目标。
