--- a/Java/05-Concurrent/05-Java并发编程实战/06-安全性、活跃性以及性能问题.md
+++ b/Java/05-Concurrent/05-Java并发编程实战/06-安全性、活跃性以及性能问题.md
@@ -8,18 +8,18 @@
 
 ## 1 安全性问题
 
-### 什么是安全性问题
+**什么是安全性问题**？
 
 - 在并发编程领域，我们衡量一个类时，通常会问：“这个方法不是线程安全的，这个类不是线程安全的？”
 - 什么是线程安全？其实本质上就是正确性，而正确性的含义就是**程序按照我们期望的执行**，不要让我们感到意外。
 - 并发 Bug 的三个主要源头：原子性问题、可见性问题和有序性问题。理论上线程安全的程序，就要避免出现原子性问题、可见性问题和有序性问题。
 
- 安全性问题即在并发条件下，程序能否按照我们的期望去执行。
+安全性问题即在并发条件下，程序能否按照我们的期望去执行。
 
-### 什么情况下需要考虑线程安全？
+**什么情况下需要考虑线程安全**？
 
 - 不是所有的代码都需要认真分析一遍是否存在原子性问题、可见性问题和有序性问题。
-- 只有 **存在共享数据并且该数据会发生变化，通俗地讲就是有多个线程会同时读写同一数据** 才需要考虑线程。
+- 只有存在共享数据并且该数据会发生变化，通俗地讲就是有多个线程会同时读写同一数据才需要考虑线程。
 
 不存在共享数据，即可以保证线程安全，此类技术有很多实现：
 
@@ -28,9 +28,12 @@
 
 但是，现实情况下，必须共享会发生变化的数据的应用场景还是很多的。
 
-### 安全性问题——数据竞争
+### 1.1 安全性问题——数据竞争
 
-**数据竞争（Data Race）**：当多个线程同时访问同一数据，并且至少有一个线程会写这个数据的时候，如果我们不采取防护措施，那么就会导致并发 Bug。
+**数据竞争（Data Race）**：
+
+1. 定义：当`多个`线程`同时地`访问`同一共享数据`，并且`至少有一个线程会写`这个数据的时候，如果我们不采取防护措施，那么就会导致并发 Bug。
+2. 后果：如果发生了数据争用，读取共享变量时得到的值将变得不可知，使得该多线程程序的运行结果将完全不可预测，可能直接崩溃。
 
 参考下面代码，当多个线程调用时候就会发生数据竞争:
 
@@ -49,7 +52,12 @@ public class Test {
 }
 ```
 
-### 安全性问题——竞态条件
+### 1.2 安全性问题——竞态条件
+
+竞态条件又名竞争冒险（race hazard）、竞争条件（race condition）。
+
+1. 定义：受各线程上代码执行的顺序和时机的影响，程序的运行结果产生（预料之外）的变化。
+2. 后果：如果存在竞态条件(race condition)，多次运行程序对于同一个输入将会有不同的结果，但结果并非完全不可预测，它将由输入数据和各线程的执行顺序共同决定。
 
 不是简单地加锁就能避免所有并发问题：
 
@@ -71,7 +79,7 @@ public class Test {
   void add10K() {
     int idx = 0;
     while(idx++ < 10000) {
-      //get() + 1 存在静态条件。
+      //get() + 1 存在竞态条件。
       set(get()+1)
     }
   }
@@ -103,11 +111,9 @@ if(isBuy) {
 }
 ```
 
-以上代码在多线程执行时并不会出现数据竞争，因为不会有多个线程同时对数据进操作，所以对数据的操作都只会有一个线程，但其还是存在竟态条件的，因为这些共享数据还是会在某个线程没有持有锁的情况下会被其它线程修改，导致当前获得的状态是失效的。该例子参考自：[什么是竞态条件？什么是数据竞争？](http://www.spring4all.com/article/806)
+以上代码在多线程执行时并不会出现数据竞争，因为不会有多个线程同时对数据进操作，所以对数据的操作都只会有一个线程，但其还是存在竟态条件的，因为这些共享数据还是会在某个线程没有持有锁的情况下会被其它线程修改，导致当前获得的状态是失效的。该例子参考自[什么是竞态条件？什么是数据竞争？](http://www.spring4all.com/article/806)。
 
-这类问题，叫 **竞态条件（Race Condition）**，即 **程序的执行结果依赖线程执行的顺序**。
-
-#### 转账中的竞态条件
+- 实例3：转账中的竞态条件
 
 ```java
 class Account {
@@ -125,9 +131,9 @@ class Account {
 }
 ```
 
-银行转账是不允许超额转出的，假设  A 账户余额 150 元，两个线程都执行从 A 账户转出金额 150 元，如果两个线程同时执行完 `if (this.balance > amt)` 这一行，那么这里的判断条件就没有起到作用，两个线程都从 A 账户转出 150 元，就导致账户余额异常了。
+银行转账是不允许超额转出的，假设  A 账户余额 150 元，两个线程都执行从 A 账户转出金额 150 元，如果两个线程同时执行完 `if (this.balance > amt)` 这一行，那么这里的判断条件就没有起到作用，两个线程都从 A 账户转出 150 元，就导致账户余额异常了。其实该例子即存在竞态条件也存在数据竞争。
 
-#### 如何理解理解竞态条件
+**如何理解理解竞态条件**？
 
 在并发场景中，程序的执行依赖于某个状态变量，类似于下面伪代码：
 
@@ -137,10 +143,16 @@ if (状态变量 满足 执行条件) {
 }
 ```
 
-1. 当某个线程发现状态变量满足执行条件后，开始执行操作；
-2. 就在这个线程执行操作的时候，其他线程同时修改了状态变量，导致状态变量不满足执行条件了。
+1. 当某个线程发现状态变量满足执行条件后，开始执行操作。
+2. 就在这个线程执行操作的时候，其他线程却修改了状态变量，导致状态变量不满足执行条件了。
 
-个人理解：**线程执行操作的判断操作，与线程将要执行的操作，不是原子性的，而线程将要执行的操作又会导致判断条件的结果发生变化，这个将会导致判断条件的结果发生变化操作，可能被其他线程抢先执行**。。
+总结：线程执行操作的判断操作，与线程将要执行的操作，不是原子性的，而将要执行的操作又会导致判断条件的结果发生变化，这个将会导致判断条件的结果发生变化操作，可能被其他线程抢先执行。
+
+关于竞态条件和数据竞争可以参考下面链接：
+
+- [《维基百科》](https://zh.wikipedia.org/wiki/%E7%AB%B6%E7%88%AD%E5%8D%B1%E5%AE%B3)
+- [什么是竞态条件？什么是数据竞争？](http://www.spring4all.com/article/806)
+- [别混淆数据争用(data race) 和竞态条件(race condition)](https://blog.csdn.net/gg_18826075157/article/details/72582939)
 
 ### 解决数据竞争和竞态条件问题——锁
 
@@ -148,11 +160,7 @@ if (状态变量 满足 执行条件) {
 
 ## 2 活跃性问题
 
-### 什么是活跃性问题
-
-活跃性问题，指的是**某个操作无法执行下去**。处理常见的死锁，还有活锁和饥饿。
-
-发生“死锁”后线程会互相等待，而且会一直等待下去，在技术上的表现形式是线程永久地“阻塞”了。
+活跃性问题，指的是**某个操作无法执行下去**。处理常见的死锁，还有活锁和饥饿。发生“死锁”后线程会互相等待，而且会一直等待下去，在技术上的表现形式是线程永久地“阻塞”了。
 
 ### 活锁
 
@@ -181,15 +189,13 @@ goto start
 
 具体可以参考[并发问题中活锁（live lock）到底指的是什么？](https://www.zhihu.com/question/20566246)
 
-#### 如何解决活锁问题
-
-解决“活锁”的方案很简单，**线程释放资源时，尝试等待一个随机的时间就可以了**。Raft 这样知名的分布式一致性算法中也用到了这种思想。
+**如何解决活锁问题**？解决“活锁”的方案很简单，**线程释放资源时，尝试等待一个随机的时间就可以了**。Raft 这样知名的分布式一致性算法中也用到了这种思想。
 
 ### 饥饿
 
 **所谓“饥饿”指的是线程因无法访问所需资源而无法执行下去的情况**。如果线程优先级“不均”，在 CPU 繁忙的情况下，优先级低的线程得到执行的机会很小，就可能发生线程“饥饿”；持有锁的线程，如果执行的时间过长，也可能导致“饥饿”问题。
 
-#### 如何解决饥饿问题
+**如何解决饥饿问题**？
 
 解决“饥饿”问题的方案很简单，有三种方案：
 
@@ -197,9 +203,7 @@ goto start
 2. 公平地分配资源。
 3. 避免持有锁的线程长时间执行。
 
-这三个方案中，方案一和方案三的适用场景比较有限，因为很多场景下，资源的稀缺性是没办法解决的，持有锁的线程执行的时间也很难缩短。方案二的适用场景相对来说更多一些。
-
-如何公平地分配资源：在并发编程里，主要是使用公平锁。所谓公平锁，是一种先来后到的方案，线程的等待是有顺序的，排在等待队列前面的线程会优先获得资源。
+这三个方案中，方案一和方案三的适用场景比较有限，因为很多场景下，资源的稀缺性是没办法解决的，持有锁的线程执行的时间也很难缩短。方案二的适用场景相对来说更多一些。如何公平地分配资源：在并发编程里，主要是使用公平锁。所谓公平锁，是一种先来后到的方案，线程的等待是有顺序的，排在等待队列前面的线程会优先获得资源。
 
 ## 3 性能问题
 
