--- a/Java/05-Concurrent/05-Java并发编程实战/11-并发工具.md
+++ b/Java/05-Concurrent/05-Java并发编程实战/11-并发工具.md
@@ -1,8 +1,17 @@
 # 并发工具
 
+主要包括：
+
+1. Semaphore
+2. ReadWriteLock
+3. StampedLock
+4. CountDownLatch 与 CyclicBarrier
+
 ## 1 Semaphore
 
 ### Semaphore 简介
+
+>信号量（英语：semaphore）又称为信号标，是一个同步对象，用于保持在0至指定最大值之间的一个计数值。当线程完成一次对该semaphore对象的等待（wait）时，该计数值减一；当线程完成一次对semaphore对象的释放（release）时，计数值加一。当计数值为0，则线程等待该semaphore对象不再能成功直至该semaphore对象变成signaled状态。semaphore对象的计数值大于0，为signaled状态；计数值等于0，为nonsignaled状态。——[《维基百科》](https://zh.wikipedia.org/wiki/%E4%BF%A1%E5%8F%B7%E9%87%8F)
 
 - Semaphore 即 **信号量**。
 - 信号量是由大名鼎鼎的计算机科学家迪杰斯特拉（Dijkstra）于 1965 年提出，在这之后的 15 年，信号量一直都是并发编程领域的终结者。直到 1980 年管程被提出来，我们才有了第二选择。
