--- a/Java/05-Concurrent/05-Java并发编程实战/19-并发工具总结.md
+++ b/Java/05-Concurrent/05-Java并发编程实战/19-并发工具总结.md
@@ -14,7 +14,7 @@
 
 [10-Lock和Condition](10-Lock和Condition.md) 中的思考题，本意是通过破坏不可抢占条件来避免死锁问题，但是它的实现中有一个致命的问题，那就是： while(true) 没有 break 条件，从而导致了死循环。除此之外，这个实现虽然不存在死锁问题，但还是存在活锁问题的，解决活锁问题很简单，只需要随机等待一小段时间就可以了：
 
-修复后的代码如下所示，仅仅修改了两个地方，一处是转账成功之后 break，另一处是在 while 循环体结束前增加了Thread.sleep(随机时间)。
+修复后的代码如下所示，仅仅修改了两个地方，一处是转账成功之后 break，另一处是在 while 循环体结束前增加了`Thread.sleep(随机时间)`。
 
 ```java
 class Account {
@@ -48,7 +48,7 @@ class Account {
 }
 ```
 
-这个思考题里面的 while(true) 问题还是比较容易看出来的，但不是所有的 while(true) 问题都这么显而易见的，很多都隐藏得比较深。例如，[13-原子类](13-原子类.md) 中的思考题本质上也是一个 while(true)，不过它隐藏得就比较深了。看上去 `while(!rf.compareAndSet(or, nr))` 是有终止条件的，而且跑单线程测试一直都没有问题。实际上却存在严重的并发问题，问题就出在对 or 的赋值在 while 循环之外，这样每次循环 or 的值都不会发生变化，所以一旦有一次循环 `rf.compareAndSet(or, nr)` 的值等于 false，那之后无论循环多少次，都会等于 false。也就是说在特定场景下，变成了 `while(true)` 问题。既然找到了原因，修改就很简单了，只要把对 or 的赋值移到 while 循环之内就可以了，修改后的代码如下所示：
+这个思考题里面的 `while(true)` 问题还是比较容易看出来的，但不是所有的 while(true) 问题都这么显而易见的，很多都隐藏得比较深。例如，[13-原子类](13-原子类.md) 中的思考题本质上也是一个 while(true)，不过它隐藏得就比较深了。看上去 `while(!rf.compareAndSet(or, nr))` 是有终止条件的，而且跑单线程测试一直都没有问题。实际上却存在严重的并发问题，问题就出在对 or 的赋值在 while 循环之外，这样每次循环 or 的值都不会发生变化，所以一旦有一次循环 `rf.compareAndSet(or, nr)` 的值等于 false，那之后无论循环多少次，都会等于 false。也就是说在特定场景下，变成了 `while(true)` 问题。既然找到了原因，修改就很简单了，只要把对 or 的赋值移到 while 循环之内就可以了，修改后的代码如下所示：
 
 ```java
 public class SafeWM {
@@ -202,7 +202,7 @@ Boolean isOk = cf.join();
 利用共享，往往能让我们快速实现功能，所谓是有福同享，但是代价就是有难要同当。在强调高可用的今天，大多数人更倾向于使用隔离的方案。
 
 ---
-## 7 线上问题定位的利器：线程栈 dump
+## 7 线上问题定位的利器：线程栈、dump
 
 [12-并发容器](12-并发容器.md) 中的思考题，本质上都是定位线上并发问题，方案很简单，就是通过查看线程栈来定位问题。重点是查看线程状态，分析线程进入该状态的原因是否合理，为了便于分析定位线程问题，你需要给线程赋予一个有意义的名字，对于线程池可以通过自定义 ThreadFactory 来给线程池中的线程赋予有意义的名字，也可以在执行 run() 方法时通过 `Thread.currentThread().setName();` 来给线程赋予一个更贴近业务的名字。
 
