--- a/Java/05-Concurrent/05-Java并发编程实战/06-安全性、活跃性以及性能问题.md
+++ b/Java/05-Concurrent/05-Java并发编程实战/06-安全性、活跃性以及性能问题.md
@@ -35,7 +35,7 @@
 1. 定义：当`多个`线程`同时地`访问`同一共享数据`，并且`至少有一个线程会写`这个数据的时候，如果我们不采取防护措施，那么就会导致并发 Bug。
 2. 后果：如果发生了数据争用，读取共享变量时得到的值将变得不可知，使得该多线程程序的运行结果将完全不可预测，可能直接崩溃。
 
-参考下面代码，当多个线程调用时候就会发生数据竞争:
+参考下面代码，当多个线程调用时候就会发生数据竞争，count 的结果是无法预知的:
 
 ```java
 public class Test {
@@ -58,8 +58,7 @@ public class Test {
 
 1. 定义：受各线程上代码执行的顺序和时机的影响，程序的运行结果产生（预料之外）的变化。
 2. 后果：如果存在竞态条件(race condition)，多次运行程序对于同一个输入将会有不同的结果，但结果并非完全不可预测，它将由输入数据和各线程的执行顺序共同决定。
-
-不是简单地加锁就能避免所有并发问题：
+3. 不是简单地加锁就能避免所有并发问题，我们还需要明确加锁的临界区。
 
 - 示例 1：
 
@@ -86,7 +85,7 @@ public class Test {
 }
 ```
 
-这个程序也不是安全的，`set(get() + 1)` 存在安全隐患，虽然我们给所有访问 count 的地方都加了锁，避免了数据竞争，但是程序的正确性依赖于线程的执行顺序，如果两个线程是先后执行 `set(get()+1)` 那么程序结构是正确的，但如果两个线程同时执行了 `get()+1` 再去 `set()`， 那程序结果就是错误的，丢失了一次 `+1` 操作。
+这个程序也不是安全的，`set(get() + 1)` 存在安全隐患，虽然我们给所有访问 count 的地方都加了锁，避免了数据竞争，但是程序的正确性依赖于线程的执行顺序，原因在于 `set(get()+1)` 操作不是原子的，线程执行 set 时，可能它读取到的数据已经发生修改了。
 
 - 实例 2：
 
@@ -100,6 +99,7 @@ lock.unlock();
 lock.lock();
 boolean isBuy = count >= purchaseQuantity;
 lock.unlock();
+
 if(isBuy) {
   //生成订单
   lock.lock();
@@ -131,7 +131,7 @@ class Account {
 }
 ```
 
-银行转账是不允许超额转出的，假设  A 账户余额 150 元，两个线程都执行从 A 账户转出金额 150 元，如果两个线程同时执行完 `if (this.balance > amt)` 这一行，那么这里的判断条件就没有起到作用，两个线程都从 A 账户转出 150 元，就导致账户余额异常了。其实该例子即存在竞态条件也存在数据竞争。
+银行转账是不允许超额转出的，假设  A 账户余额 150 元，两个线程都执行从 A 账户转出金额 150 元，如果两个线程都执行到 `if (this.balance > amt)` 这一行，那么这里的判断条件就没有起到作用，两个线程都从 A 账户转出 150 元，就导致账户余额异常了。其实该例子即存在竞态条件也存在数据竞争。
 
 **如何理解理解竞态条件**？
 
@@ -225,7 +225,7 @@ S = 1/((1-p) + (p/n))
 
 假设 CPU 的核数（也就是 n）无穷大，那加速比 S 的极限就是 20，也就是说，如果我们的串行率是 5%，那么我们无论采用什么技术，最高也就只能提高 20 倍的性能。
 
-那么串行百分比一般怎么得出来呢？临界区都是串行的，非临界区都是并行的，用单线程执行临界区的时间/用单线程执行(临界区+非临界区)的时间就是串行百分比。
+>那么串行百分比一般怎么得出来呢？临界区都是串行的，非临界区都是并行的，公式：`用单线程执行临界区的时间 / 用单线程执行(临界区+非临界区)的时间 = 串行百分比`。
 
 ### 使用锁一定要关注性能问题
 
