--- a/Java/05-Concurrent/05-Java-Concurrency-in-Practice-GeekTime/06-安全性、活跃性以及性能问题.md
+++ b/Java/05-Concurrent/05-Java-Concurrency-in-Practice-GeekTime/06-安全性、活跃性以及性能问题.md
@@ -56,7 +56,7 @@ public class Test {
 
 竞态条件又名竞争冒险（race hazard）、竞争条件（race condition）。
 
-1. 定义：受各线程上代码执行的顺序和时机的影响，程序的运行结果产生（预料之外）的变化。
+1. 定义：受各线程上代码执行的顺序和时机的影响，程序的运行结果会产生（预料之外）的变化。
 2. 后果：如果存在竞态条件(race condition)，多次运行程序对于同一个输入将会有不同的结果，但结果并非完全不可预测，它将由输入数据和各线程的执行顺序共同决定。
 3. 不是简单地加锁就能避免所有并发问题，我们还需要明确加锁的临界区。
 
