--- a/Java/01-Java-Basic/异常处理.md
+++ b/Java/01-Java-Basic/异常处理.md
@@ -1,3 +1,5 @@
+# 异常处理
+
 ## 1 栈轨迹
 
 从Exception获取StackTraceElement的数组，其中每个元素都表示栈中的一帧。元素0是栈顶的元素。
@@ -48,5 +50,5 @@
             e.printStackTrace();
         }
 ```
-try退出时，scanner会自动调用close()方法关闭
 
+try退出时，scanner会自动调用close()方法关闭
